duniverse/menhirLib.20200211/test/static/bad/undeclared-token-alias.exp
File "undeclared-token-alias.mly", line 23, characters 6-10:
Error: the token alias "42" was never declared.
